--- a/Italian/main/Calendar.apk/res/values-it/strings.xml
+++ b/Italian/main/Calendar.apk/res/values-it/strings.xml
@@ -204,10 +204,13 @@
     <string name="topic_event_list_header_label">Prossimi eventi</string>
     <string name="topic_list_header_label">Lista</string>
     <string name="setting_wifi_mode">Iscriviti solo sotto copertura Wi-Fi</string>
+    <string name="user_notice_online_title">Termini e Condizioni</string>
     <string name="user_notice_online_agreement">Stai per accedere ad un calendario tramite MIUI, questo è un servizio per cui è richiesta una connessione Internet. Utilizzando questo servizio dichiari di accettare %1$ e 2$s.</string>
+    <string name="user_notice_online_ok">Accetta e continua</string>
     <string name="data_notice_online_large_image">La sottoscrizione al calendario a grandi pagine è stata impostata con sincronizzazione solo con Wi-Fi per risparmiare traffico dati.</string>
     <string name="data_notice_change_settings">Impostazioni modificate</string>
     <string name="data_notice_continue_confirm">Continua</string>
+    <string name="not_exist_topic_list">Impossibile recuperare la lista dei calendari</string>
     <string name="online_reminder_header_text">Ricordami</string>
     <string name="online_reminder_slider_text">Attiva avviso</string>
     <string name="online_reminder_minutes_text">Orario avviso</string>
@@ -234,6 +237,7 @@
     <string name="event_info_repeat">"Ripetizione: "</string>
     <string name="event_info_where">"Dove: "</string>
     <string name="event_info_descrip">"Descrizione: "</string>
+    <string name="event_info_end">"Fine: "</string>
     <string name="event_action_delete">Elimina</string>
     <string name="event_action_edit">Modifica</string>
     <string name="lunar_date">Data lunare</string>
@@ -298,6 +302,29 @@
     <string name="can_not_modify_repeating_acrossing_days_event">Gli eventi ripetuti e quelli in corso non possono essere modificati</string>
     <string name="can_not_create_long_event">Contenuto troppo lungo</string>
     <string name="from_google_group_calendar">Calendario Google</string>
+    <string name="repeat_activity_label">Ripeti</string>
+    <string name="repeat_custom_activity_label">Personalizza</string>
+    <string name="repeat_label_frequency">Frequenza</string>
+    <string name="repeat_label_interval">Ogni</string>
+    <string name="repeat_interval_dialog_title">Ogni %1$s</string>
+    <string name="repeat_interval_frequency_single">%1$s</string>
+    <string name="repeat_interval_frequency">%1$d %2$ss</string>
+    <string name="repeat_week_info">" %1$s %2$s"</string>
+    <string name="repeat_custom_prompt_daily">every %1$s</string>
+    <string name="repeat_custom_prompt">ogni %1$s alle %2$s</string>
+    <string name="repeat_custom_prompt_splitter">", "</string>
+    <string name="repeat_month_day_splitter">" "</string>
+    <string name="repeat_custom_prompt_sentence">"L'evento si ripeterà %1$s"</string>
+    <string name="repeat_custom_string_prefix">Personalizza</string>
+    <string name="repeat_custom_string_suffix">" (%1$s)"</string>
+    <string name="repeat_label_day">Giorno</string>
+    <string name="repeat_label_week">Settimana</string>
+    <string name="repeat_label_choose_time">Scegli orario promemoria</string>
+    <string name="repeat_label_choose_day">Scegli giorno</string>
+    <string name="repeat_label_choose_week">Scegli settimana</string>
+    <string name="repeat_label_choose_month">Scegli mese</string>
+    <string name="repeat_end_label">Fine ripetizione</string>
+    <string name="repeat_end_times_unit" />
     <string name="more_string">Altri %1$s…</string>
     <string name="copy_email">Copia indirizzo email</string>
     <string name="copy_number">Copia numero di telefono</string>
