--- a/Italian/main/MiuiGallery.apk/res/values-it/strings.xml
+++ b/Italian/main/MiuiGallery.apk/res/values-it/strings.xml
@@ -657,16 +657,17 @@
     <string name="gallery_cloud_provider_name">Galleria</string>
     <string name="sync_album">Sincronizza album</string>
     <string name="sync_album_summary">Carica le foto e gli screenshot nel tuo spazio di archiviazione Mi Cloud</string>
-  <string name="sync_third_party_app_pic_summary">Carica automaticamente le foto nelle cartelle delle app sul tuo cloud</string>
+    <string name="sync_third_party_app_pic_summary">Carica automaticamente le foto nelle cartelle delle app sul tuo cloud</string>
     <string name="open_sync_title">Sincronizzazione necessaria</string>
     <string name="alert_message_open_sync">"E' necessaria la sincronizzazione, vuoi sincronizzare adesso?"</string>
     <string name="open">Apri sincronizzazione</string>
     <string name="click_to_add_picture">Tocca per aggiungere immagini</string>
     <string name="no_network_connected">Nessuna connessione di rete disponibile</string>
     <string name="initial_cloud_text">In ogni momento e ovunque tu sia, guarda e organizza le tue foto</string>
-    <string name="initial_cloud_button_text">"Inizia ad utilizzare l'album cloud"</string>
+    <string name="initial_cloud_button_text">Accedi</string>
     <string name="storage_no_space">Spazio di archiviazione esaurito</string>
-    <string name="add_to_cloud_album">Aggiungi al Cloud</string>
+    <string name="add_to_cloud_album">"Aggiungi all'album"</string>
+    <string name="choose_cloud_album">Scegli album</string>
     <string name="move_to_cloud_album">Sposta nel Cloud</string>
     <string name="move">Sposta</string>
     <string name="cloud_folder_chooser_move">"Cancella immagini dall'album originale"</string>
