--- a/Italian/main/AntiSpam.apk/res/values-it/strings.xml
+++ b/Italian/main/AntiSpam.apk/res/values-it/strings.xml
@@ -152,6 +152,7 @@ Aggiungi più parole separandole con la virgola."</string>
     <string name="st_title_call_wait_setting">Impostazioni chiamata in attesa</string>
     <string name="st_title_call_wait">Chiamata in attesa</string>
     <string name="st_title_sim_card">%1$s-SIM %2$s</string>
+    <string name="st_title_sim_unknown">Sconosciuta</string>
     <string name="st_title_not_sim">Vuoto</string>
     <string name="st_sum_call_wait">Se il segnale di occupato non è quello predefinito potrebbe confondere il chiamante.</string>
     <string name="sim_not_ready">SIM non pronta</string>
