--- a/Italian/main/NetworkAssistant2.apk/res/values-it/strings.xml
+++ b/Italian/main/NetworkAssistant2.apk/res/values-it/strings.xml
@@ -191,8 +191,7 @@ Fascia bassa: %1$s rimanenti | %2$s usati"</string>
     <string name="network_assistant_upgraded_title">Aggiornamento completato</string>
     <string name="network_assistant_upgraded_body">"Tocca per limitare l'utilizzo dei dati."</string>
     <string name="lock_screen_traffic_warn_title">Avviso utilizzo dati</string>
-    <string name="notification_title">%1$s-%2$s: circa %3$s utilizzati</string>
-    <string name="notification_content_title">Utilizzati %1$s durante il blocco</string>
+    <string name="lock_screen_traffic_notify_body">Utilizzo dati a schermo spento: %s</string>
     <string name="free_time_traffic_title">Inserisci un limite fuori soglia</string>
     <string name="free_time_traffic_hint">Inserisci un limite fuori soglia</string>
     <string name="traffic_protection_label">Avviso utilizzo dati</string>
@@ -212,12 +211,18 @@ Fascia bassa: %1$s rimanenti | %2$s usati"</string>
     <string name="traffic_config_alert_cancel">Annulla</string>
     <string name="traffic_config_alert_nomore">Non chiedere più</string>
     <string name="traffic_config_alert_body">"Il resoconto dei dati usati fornito dal tuo operatore mostra che ti rimangono %s.
+
 Vuoi aggiornare il limite uso dati locale?"</string>
-    <string name="traffic_config_alert_body_normal">"Il resoconto dei dati usati fornito dal tuo operatore mostra che hai ancora %1$s di traffico in picco residuo. Questo è diverso dal limite di %2$s che hai stabilito localmente."</string>
+    <string name="traffic_config_alert_body_normal">"
+Il resoconto dei dati usati fornito dal tuo operatore mostra che hai ancora %1$s di traffico in picco residuo. Questo è diverso dal limite di %2$s che hai stabilito localmente."</string>
     <string name="traffic_config_alert_body_leisure">"
-Il resoconto dei dati usati fornito dal tuo operatore mostra che hai ancora %1$s di traffico fuori picco residuo. Questo è diverso dal limite di %2$s che hai stabilito localmente"</string>
+Il resoconto dei dati usati fornito dal tuo operatore mostra che hai ancora %1$s di traffico fuori picco residuo.Questo è diverso dal limite di %2$s che hai stabilito localmente"</string>
     <string name="traffic_config_alert_body_leisure_notset">"
 Il conto del tuo operatore sull'utilizzo dei dati mostra che hai %1$s di dati fuori soglia ancora a disposizione. Non hai impostato alcun limite."</string>
+    <string name="traffic_config_alert_body_extra">"
+Hai acquistato %1$s i traffico aggiuntivo questo mese. Questo è diverso dai %2$s che hai aggiunto manualmente."</string>
+    <string name="traffic_config_alert_body_extra_notset">"
+Hai acquistato %1$s i traffico aggiuntivo questo mese. Non corrisponde al limite mensile che hai impostato manualmente."</string>
     <string name="traffic_config_alert_setted">Limite dati impostato</string>
     <string name="operator_name_cmcc">China Mobile</string>
     <string name="operator_name_unicom">China Unicom</string>
@@ -355,7 +360,7 @@ Contatta il tuo provider di servizi per maggiori informazioni."</string>
     <string name="privacy_prompt_purchase_history_message">"Il tuo numero di telefono ed i dettagli dell'operatore verranno inviati ai server Xiaomi per analizzare la tua cronologia di acquisto."</string>
     <string name="title_limit_traffic_per_day">Limite utilizzo dati giornaliero</string>
     <string name="pref_title_traffic_limit_number">Dimensione</string>
-    <string name="pref_title_over_traffic_limit_warning">Al sueperamento soglia</string>
+    <string name="pref_title_over_traffic_limit_warning">Al superamento soglia</string>
     <string name="reach_daily_limit_value_title">Limite dati giornaliero raggiunto</string>
     <string name="reach_daily_limit_value_body">"Riduci l'utilizzo dei dati 3G."</string>
     <string name="daily_limit_network_available_body">"Tocca per vedere le statistiche sull'utilizzo dei dati."</string>
@@ -363,13 +368,13 @@ Contatta il tuo provider di servizi per maggiori informazioni."</string>
     <string name="three_percent_total_pkg">%s (3%% dei tuoi dati 3G mensili)</string>
     <string name="five_percent_total_pkg">%s (5%% dei tuoi dati 3G mensili)</string>
     <string name="ten_percent_total_pkg">%s (10%% dei tuoi dati 3G mensili)</string>
-    <string name="international_roaming_setting">Roaming internationazionale</string>
+    <string name="international_roaming_setting">Roaming internazionale</string>
     <string name="pref_allow_connect_network_title">Roaming dati internazionale</string>
     <string name="pref_allow_connect_network_summary">Collegati al servizio dati anche durante il roaming internazionale</string>
     <string name="pref_allow_connect_network_whitelist_title">Consenti eccezioni</string>
     <string name="pref_allow_connect_network_whitelist_summary">Consentire alle app nella lista delle eccezioni di collegarsi al servizio dati anche durante il roaming internazionale?</string>
     <string name="pref_whitelist_setting">Eccezioni</string>
-    <string name="alter_dialog_message">La connesione dati durante il rroaming internazionale può comportare costi elevati con il tuo operatore. onsentire alle app nella lista delle eccezioni di collegarsi al servizio dati anche durante il roaming internazionale?</string>
+    <string name="alter_dialog_message">La connesione dati durante il roaming internazionale può comportare costi elevati con il tuo operatore. Consentire alle app nella lista delle eccezioni di collegarsi al servizio dati anche durante il roaming internazionale?</string>
     <string name="add_white_list">Aggiungi</string>
     <string name="international_roaming_whitelist_count">%d applicazioni possono collegarsi al servizio dati anche durante il roaming internazionale</string>
     <string name="firewall_rule_group_title_roaming">Roaming internazionale</string>
@@ -381,5 +386,20 @@ Contatta il tuo provider di servizi per maggiori informazioni."</string>
     <string name="roaming_start_title">Roaming internazionale</string>
     <string name="roaming_start_body">Consenti alle app nella lista delle eccezioni di collegarsi al servizio dati anche durante il roaming internazionale.</string>
     <string name="dialog_app_roaming_title">il roamig internazionale non è attivato per %1$s</string>
-    <string name="dialog_app_roaming_message">Durante il roaming internazionale, solo le applicazioni cha hai aggiunto alla lista delle eccezioni possono utilizzare i servizi dati. %1$s non è stata aggiunta alla lista delle eccezioni. Vedere la lista delle eccezioni?"</string>
+    <string name="dialog_app_roaming_message">Durante il roaming internazionale, solo le applicazioni che hai aggiunto alla lista delle eccezioni possono utilizzare i servizi dati. %1$s non è stata aggiunta alla lista delle eccezioni. Vedere la lista delle eccezioni?"</string>
+    <string name="traffic_setting_completed">OK</string>
+    <string name="traffic_setting_extra_pkg_title">Impostazioni aggiuntive</string>
+    <string name="traffic_setting_extra_pkg_summary">Regola il piano dati e le soglie</string>
+    <string name="traffic_setting_extra_pkg_oversea_summary">Regola il piano dati e le soglie di utilizzo</string>
+    <string name="traffic_setting_daily_limit_summary">Imposta soglie di utilizzo dati</string>
+    <string name="traffic_setting_extra_traffic_title">Impostazioni aggiuntive</string>
+    <string name="traffic_setting_step_num">Impostazioni piano dati</string>
+    <string name="traffic_setting_open">Attivato</string>
+    <string name="traffic_setting_app_count">%d applicazioni</string>
+    <string name="traffic_warning_purchase_title">Il traffico rimanente è inferiore al %d%%</string>
+    <string name="traffic_purchase_body">Risparmia il 50% ricaricando adesso.</string>
+    <string name="traffic_purchse_suggestion">"E' il momento di ricaricare"</string>
+    <string name="traffic_over_purchase_title">Limite dati superato</string>
+    <string name="traffic_over_purchase_body">Tocca per leggere i dettagli.</string>
+    <string name="traffic_over_purchase_link">Hai raggiunto il limite previsto dal tuo piano dati.Se superi il limite previsto dal tuo piano dati il tuo operatore potrebbe addebitarti dei costi aggiuntivi. Ricarica adesso e risparmia il 50%.</string>
 </resources>
