--- a/Italian/main/MiuiCamera.apk/res/values-it/strings.xml
+++ b/Italian/main/MiuiCamera.apk/res/values-it/strings.xml
@@ -334,13 +334,13 @@
     <string name="pref_camera_hdr_entry_live">Live</string>
     <string name="pref_simple_hdr_entry_off">Disattivato</string>
     <string name="pref_simple_hdr_entry_on">Attivato</string>
-    <string name="pref_camera_countdown_title">Conto alla rovescia</string>
-    <string name="simple_mode_button_text_countdown">Chiudi conto alla rovescia</string>
+    <string name="pref_camera_countdown_title">Timer</string>
+    <string name="simple_mode_button_text_countdown">Chiudi Timer</string>
     <string name="pref_camera_countdown_entry_3s">3 sec</string>
     <string name="pref_camera_countdown_entry_5s">5 sec</string>
     <string name="pref_camera_countdown_entry_10s">10 sec</string>
-    <string name="pref_camera_delay_capture_title">Conto alla rovescia</string>
-    <string name="simple_mode_button_text_delay_capture">Chiudi conto alla rovescia</string>
+    <string name="pref_camera_delay_capture_title">Timer</string>
+    <string name="simple_mode_button_text_delay_capture">Chiudi Timer</string>
     <string name="pref_camera_delay_capture_entry_audio">Audio</string>
     <string name="pref_camera_delay_capture_entry_3s">3 sec</string>
     <string name="pref_camera_delay_capture_entry_5s">5 sec</string>
